Fixed title input overflow issue in event create page

--- a/html/css/create_event.css
+++ b/html/css/create_event.css
@@ -227,4 +227,8 @@
         max-width: 100%;
         padding-left: 1.2em;
     }
+
+    .card-container.event-creation-container input.form-control.title-input {
+        width: 100%;
+    }
 }
